src/objects/ADvendio__VAT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manage different VAT for different Countries and Dates</description>
    <fields>
        <fullName>ADvendio__CountryBuyer__c</fullName>
        <label>Country Buyer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CountryCode__c</fullName>
        <label>Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CountrySeller__c</fullName>
        <label>Country Seller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VAT__c</fullName>
        <label>VAT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidTo__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>VAT</label>
</CustomObject>